<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/headerTextSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tvHello"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/code_logo" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:hint="@string/type_your_name"
        android:inputType="text"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtName"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:text="@string/greeting" />


</RelativeLayout>